Fixed BrAPI v1 import (now compatible with Gigwa CallSets)